force-app/main/default/objects/departures_dates__c/fields/Min_Not_Met_Requesting_BDM__c.field-meta.xml
<CustomField>
    <fullName>Min_Not_Met_Requesting_BDM__c</fullName>
    <label>Min Not Met Requesting BDM</label>
    <type>Email</type>
</CustomField>