force-app/main/default/objects/departures_dates__c/fields/Min_Number_Level__c.field-meta.xml
<CustomField>
    <fullName>Min_Number_Level__c</fullName>
    <defaultValue>&apos;Departure Date&apos;</defaultValue>
    <label>Min Number Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Departure Date</fullName>
            </value>
            <value>
                <fullName>Allocation</fullName>
            </value>
            <value>
                <fullName>Min Number Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>