force-app/main/default/objects/departures_dates__c/fields/Min_Number_Resolution_Required__c.field-meta.xml
<CustomField>
    <fullName>Min_Number_Resolution_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Min Number Resolution Required</label>
    <type>Checkbox</type>
</CustomField>