force-app/main/default/objects/departures_dates__c/fields/min_numbers_met__c.field-meta.xml
<CustomField>
    <fullName>min_numbers_met__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Flight Ticketing team use - checks as true if number of pax confirmed &gt;= min numbers</description>
    <inlineHelpText>Process Builder - Auto checks as true if number of pax confirmed greater or equal to min. numbers</inlineHelpText>
    <label>Min Numbers Met?</label>
    <type>Checkbox</type>
</CustomField>