force-app/main/default/objects/departures_dates__c/fields/Min_Numbers_Met_Send_Email__c.field-meta.xml
<CustomField>
    <fullName>Min_Numbers_Met_Send_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Use this checkbox to fire off the email confirmation that the tour is going ahead</inlineHelpText>
    <label>Min Numbers Met - Send Email</label>
    <type>Checkbox</type>
</CustomField>