force-app/main/default/objects/departures_dates__c/fields/MinAdvancedBookingOffset__c.field-meta.xml
<CustomField>
    <fullName>MinAdvancedBookingOffset__c</fullName>
    <label>MinAdvancedBookingOffset</label>
    <length>255</length>
    <type>Text</type>
</CustomField>