force-app/main/default/objects/departures_dates__c/fields/Minimum__c.field-meta.xml
<CustomField>
    <fullName>Minimum__c</fullName>
    <inlineHelpText>Minimum group size as per deal Fine Print</inlineHelpText>
    <label>Minimum</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>