force-app/main/default/objects/departures_dates__c/fields/Minimum_LOS__c.field-meta.xml
<CustomField>
    <fullName>Minimum_LOS__c</fullName>
    <label>Minimum LOS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>