force-app/main/default/objects/departures_dates__c/fields/Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Month_Year__c</fullName>
    <formula>TEXT(YEAR( date__c )) &amp; &quot;-&quot; &amp; TEXT(MONTH(date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month/Year</label>
    <type>Text</type>
</CustomField>