force-app/main/default/objects/departures_dates__c/fields/mp_Acknowledgement_Status__c.field-meta.xml
<CustomField>
    <fullName>mp_Acknowledgement_Status__c</fullName>
    <label>BC Acknowledgement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Acknowledged</fullName>
                <default>true</default>
                <label>Not Acknowledged</label>
            </value>
            <value>
                <fullName>Acknowledged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>