force-app/main/default/objects/departures_dates__c/fields/mp_bc_available__c.field-meta.xml
<CustomField>
    <fullName>mp_bc_available__c</fullName>
    <label>BC Available</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NOT AVAILABLE</fullName>
                <default>true</default>
                <label>NOT AVAILABLE</label>
            </value>
            <value>
                <fullName>AVAILABLE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>