force-app/main/default/objects/departures_dates__c/fields/Nights__c.field-meta.xml
<CustomField>
    <fullName>Nights__c</fullName>
    <formula>IF(options__c!=null, options__r.NIghts__c,  IF( sub_options__c!=null, sub_options__r.options__r.NIghts__c,0) )</formula>
    <label>Nights</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>