force-app/main/default/objects/departures_dates__c/fields/Not_in_Range_For_Ticketing__c.field-meta.xml
<CustomField>
    <fullName>Not_in_Range_For_Ticketing__c</fullName>
    <label>Not in Range For Ticketing</label>
    <summarizedField>order__c.qty__c</summarizedField>
    <summaryFilterItems>
        <field>order__c.Booking_Validation__c</field>
        <operation>equals</operation>
        <value>Not In Date Range For Ticketing</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>order__c.order_status__c</field>
        <operation>equals</operation>
        <value>Confirmed, Ready For Export, Exported</value>
    </summaryFilterItems>
    <summaryForeignKey>order__c.departures_dates__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>