force-app/main/default/objects/departures_dates__c/fields/NRMA_Date__c.field-meta.xml
<CustomField>
    <fullName>NRMA_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NRMA Date</label>
    <type>Checkbox</type>
</CustomField>