force-app/main/default/objects/departures_dates__c/fields/NRMA_Remaining_Allocation__c.field-meta.xml
<CustomField>
    <fullName>NRMA_Remaining_Allocation__c</fullName>
    <formula>allocation__c - ( NRMA_Held__c +  NRMA_Sold__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NRMA Remaining Allocation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>