force-app/main/default/objects/departures_dates__c/fields/online_status__c.field-meta.xml
<CustomField>
    <fullName>online_status__c</fullName>
    <label>Online Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Offline - Auto</fullName>
            </value>
            <value>
                <fullName>Offline - Manual</fullName>
            </value>
            <value>
                <fullName>Hidden</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>