force-app/main/default/objects/departures_dates__c/fields/option_dwla_record_type__c.field-meta.xml
<CustomField>
    <fullName>option_dwla_record_type__c</fullName>
    <formula>options__r.Deal__r.RecordTypeId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>option deal record type</label>
    <type>Text</type>
</CustomField>