force-app/main/default/objects/departures_dates__c/fields/Option_Text__c.field-meta.xml
<CustomField>
    <fullName>Option_Text__c</fullName>
    <formula>options__r.title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Option Text</label>
    <type>Text</type>
</CustomField>