force-app/main/default/objects/departures_dates__c/fields/order_nights_allocated__c.field-meta.xml
<CustomField>
    <fullName>order_nights_allocated__c</fullName>
    <label>Order Nights Allocated</label>
    <summarizedField>Order_Night__c.order_quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Order_Night__c.is_first_night__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Order_Night__c.status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Order_Night__c.Cancelled_Migrated_TAD_Order__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Order_Night__c.departures_dates__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>