force-app/main/default/objects/departures_dates__c/fields/ordexp_Additional_comments__c.field-meta.xml
<CustomField>
    <fullName>ordexp_Additional_comments__c</fullName>
    <label>Additional comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>