force-app/main/default/objects/departures_dates__c/fields/ordexp_Alternate_option_meet_min_not_met__c.field-meta.xml
<CustomField>
    <fullName>ordexp_Alternate_option_meet_min_not_met__c</fullName>
    <label>Alternate options meet min not met?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>