force-app/main/default/objects/departures_dates__c/fields/ordexp_min_numbers_approval_Finance__c.field-meta.xml
<CustomField>
    <fullName>ordexp_min_numbers_approval_Finance__c</fullName>
    <label>Min numbers approval - Finance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>