force-app/main/default/objects/departures_dates__c/fields/ordexp_Options_availbale_to_customers__c.field-meta.xml
<CustomField>
    <fullName>ordexp_Options_availbale_to_customers__c</fullName>
    <label>Options available to customers?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Move to different date, same deal</fullName>
            </value>
            <value>
                <fullName>Different Option same Deal</fullName>
            </value>
            <value>
                <fullName>Different Deal</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Coupon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>