force-app/main/default/objects/departures_dates__c/fields/ordexp_Orders_Ticketed_Or_Booked__c.field-meta.xml
<CustomField>
    <fullName>ordexp_Orders_Ticketed_Or_Booked__c</fullName>
    <label>Orders Ticketed Or Booked?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>