force-app/main/default/objects/departures_dates__c/fields/ordexp_remaining_allocation__c.field-meta.xml
<CustomField>
    <fullName>ordexp_remaining_allocation__c</fullName>
    <formula>TEXT(Allocation_Table__r.Remaining__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Allocation</label>
    <type>Text</type>
</CustomField>