force-app/main/default/objects/departures_dates__c/fields/ordexp_return_date__c.field-meta.xml
<CustomField>
    <fullName>ordexp_return_date__c</fullName>
    <formula>IF (  Nights__c  
 &gt; 0,(date__c+Nights__c)-1,IF ( Deal_for_Reporting__r.number_of_days__c
 &gt; 0, date__c + (Deal_for_Reporting__r.number_of_days__c
 - 1), date__c + (Deal_for_Reporting__r.number_of_days__c
 - 1)
))</formula>
    <label>Return Date</label>
    <type>Date</type>
</CustomField>