force-app/main/default/objects/departures_dates__c/fields/ordexp_Total_Order_Price__c.field-meta.xml
<CustomField>
    <fullName>ordexp_Total_Order_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Gross Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>