force-app/main/default/objects/departures_dates__c/fields/ordexp_why_is_this_required__c.field-meta.xml
<CustomField>
    <fullName>ordexp_why_is_this_required__c</fullName>
    <label>Why is this required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Operator</fullName>
            </value>
            <value>
                <fullName>Not commercially viable</fullName>
            </value>
            <value>
                <fullName>Run rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>