force-app/main/default/objects/departures_dates__c/fields/Previous_status__c.field-meta.xml
<CustomField>
    <fullName>Previous_status__c</fullName>
    <label>Previous status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>