force-app/main/default/objects/departures_dates__c/fields/PRICE__c.field-meta.xml
<CustomField>
    <fullName>PRICE__c</fullName>
    <formula>IF( NOT(ISBLANK( Deal__c )) ,  Deal__r.price__c  , IF(NOT(ISBLANK( DealID_from_Option__c )),  options__r.price__c  ,  sub_options__r.Price1__c  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PRICE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>