force-app/main/default/objects/departures_dates__c/fields/Ready_For_Ticketing_NZ__c.field-meta.xml
<CustomField>
    <fullName>Ready_For_Ticketing_NZ__c</fullName>
    <label>Ready For Ticketing - NZ</label>
    <summarizedField>order__c.qty__c</summarizedField>
    <summaryFilterItems>
        <field>order__c.Booking_Validation__c</field>
        <operation>equals</operation>
        <value>Ticket Flight</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>order__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>TNZ, WT</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>order__c.order_status__c</field>
        <operation>equals</operation>
        <value>Confirmed, Ready For Export, Exported</value>
    </summaryFilterItems>
    <summaryForeignKey>order__c.departures_dates__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>