force-app/main/default/objects/departures_dates__c/fields/recently_expired__c.field-meta.xml
<CustomField>
    <fullName>recently_expired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recently Expired</label>
    <type>Checkbox</type>
</CustomField>