force-app/main/default/objects/departures_dates__c/fields/Remaining_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Allocation__c</fullName>
    <formula>/*IF( special_date__c , 
Allocation_Table__r.Remaining__c - ( IF( Is_Cruise__c , Allocation_Table__r.Solo_Balance__c , 0)),  
allocation__c - ( Total_soldhold__c + IF( Is_Cruise__c , Solo_Balance__c , 0) ) 
)*/
Allocation_Table__r.Remaining__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TOTAL REMAINING ALLOCATION</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>