force-app/main/default/objects/departures_dates__c/fields/Restriction__c.field-meta.xml
<CustomField>
    <fullName>Restriction__c</fullName>
    <label>Restriction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arrival</fullName>
            </value>
            <value>
                <fullName>Departure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>