force-app/main/default/objects/departures_dates__c/fields/Room_Type_Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Room_Type_Unique_Identifier__c</fullName>
    <externalId>true</externalId>
    <label>Room Type Unique Identifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>