force-app/main/default/objects/departures_dates__c/fields/Sales_Last_Week__c.field-meta.xml
<CustomField>
    <fullName>Sales_Last_Week__c</fullName>
    <label>Sales Last Week</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>