force-app/main/default/objects/departures_dates__c/fields/Sales_Report__c.field-meta.xml
<CustomField>
    <fullName>Sales_Report__c</fullName>
    <formula>IF(mp_BC_Available_formula__c = &apos;NOT AVAILABLE&apos;, HYPERLINK( &apos;https://cicopy-tad.cs111.force.com/TADMerchantPortal/s/report/00O1e000000F8cO?reportFilters=[{&quot;column&quot;:&quot;departures_dates__c.Name&quot;,&quot;operator&quot;:&quot;equals&quot;,&quot;value&quot;:&quot;&apos; &amp; Name &amp; &apos;&quot;},{&quot;column&quot;:&quot;Deal__c.Name&quot;,&quot;operator&quot;:&quot;equals&quot;,&quot;value&quot;:&quot;&apos; &amp;  Deal__r.Name  &amp; &apos;&quot;}]&apos;,&apos;AVAILABLE&apos;, &quot;_parent&quot; ), &apos;NOT AVAILABLE&apos; )</formula>
    <label>Sales Report Hyperlink</label>
    <type>Text</type>
</CustomField>