force-app/main/default/objects/departures_dates__c/fields/Sales_Report_mp__c.field-meta.xml
<CustomField>
    <fullName>Sales_Report_mp__c</fullName>
    <formula>IF( date__c &gt; TODAY() ,&quot;AVAILABLE&quot;,&quot;NOT AVAILABLE&quot;)</formula>
    <label>Sales Report</label>
    <type>Text</type>
</CustomField>