force-app/main/default/objects/departures_dates__c/fields/schedule_time__c.field-meta.xml
<CustomField>
    <fullName>schedule_time__c</fullName>
    <formula>LastModifiedDate - 61*(1/24/60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>schedule time</label>
    <type>DateTime</type>
</CustomField>