force-app/main/default/objects/departures_dates__c/fields/send_to_travefy__c.field-meta.xml
<CustomField>
    <fullName>send_to_travefy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send To Travefy</label>
    <type>Checkbox</type>
</CustomField>