force-app/main/default/objects/departures_dates__c/fields/Send_to_Travefy_POE__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Travefy_POE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to Travefy POE</label>
    <type>Checkbox</type>
</CustomField>