force-app/main/default/objects/departures_dates__c/fields/SOLD__c.field-meta.xml
<CustomField>
    <fullName>SOLD__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SOLD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>