force-app/main/default/objects/departures_dates__c/fields/special_date__c.field-meta.xml
<CustomField>
    <fullName>special_date__c</fullName>
    <defaultValue>true</defaultValue>
    <label>v3 / Pool Date</label>
    <type>Checkbox</type>
</CustomField>