force-app/main/default/objects/departures_dates__c/fields/stop_order_comms__c.field-meta.xml
<CustomField>
    <fullName>stop_order_comms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop Order Comms</label>
    <type>Checkbox</type>
</CustomField>