force-app/main/default/objects/departures_dates__c/fields/Stop_Sell_Open_Sell__c.field-meta.xml
<CustomField>
    <fullName>Stop_Sell_Open_Sell__c</fullName>
    <label>Stop Sell/Open Sell</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stop Sell</fullName>
            </value>
            <value>
                <fullName>Open Sell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>