force-app/main/default/objects/departures_dates__c/fields/Sub_Option_Text__c.field-meta.xml
<CustomField>
    <fullName>Sub_Option_Text__c</fullName>
    <formula>sub_options__r.title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Option Text</label>
    <type>Text</type>
</CustomField>