force-app/main/default/objects/departures_dates__c/fields/sub_optiones_record_type_id__c.field-meta.xml
<CustomField>
    <fullName>sub_optiones_record_type_id__c</fullName>
    <formula>sub_options__r.options__r.Deal__r.RecordTypeId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>sub optiones record type id</label>
    <type>Text</type>
</CustomField>