force-app/main/default/objects/departures_dates__c/fields/sub_options__c.field-meta.xml
<CustomField>
    <fullName>sub_options__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>sub options</label>
    <referenceTo>sub_options__c</referenceTo>
    <relationshipLabel>departures dates</relationshipLabel>
    <relationshipName>departures_dates</relationshipName>
    <type>Lookup</type>
</CustomField>