force-app/main/default/objects/departures_dates__c/fields/TAD_Held__c.field-meta.xml
<CustomField>
    <fullName>TAD_Held__c</fullName>
    <label>TAD Held</label>
    <summarizedField>order__c.qty__c</summarizedField>
    <summaryFilterItems>
        <field>order__c.order_status__c</field>
        <operation>equals</operation>
        <value>On Hold</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>order__c.RecordTypeId</field>
        <operation>notEqual</operation>
        <value>TC, NRMA, TNZ</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>order__c.Referrer__c</field>
        <operation>notEqual</operation>
        <value>NRMA</value>
    </summaryFilterItems>
    <summaryForeignKey>order__c.departures_dates__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>