force-app/main/default/objects/departures_dates__c/fields/TC_Exclusive__c.field-meta.xml
<CustomField>
    <fullName>TC_Exclusive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TC Exclusive</label>
    <type>Checkbox</type>
</CustomField>