force-app/main/default/objects/departures_dates__c/fields/TC_Exclusive_Allocation__c.field-meta.xml
<CustomField>
    <fullName>TC_Exclusive_Allocation__c</fullName>
    <formula>IF( TC_Exclusive__c ,  allocation__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TC Exclusive Allocation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>