force-app/main/default/objects/departures_dates__c/fields/TC_Exclusive_Allocation_Remaining__c.field-meta.xml
<CustomField>
    <fullName>TC_Exclusive_Allocation_Remaining__c</fullName>
    <formula>TC_Exclusive_Allocation__c - ( TC_Hold__c +  TC_Sold__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TC Exclusive Allocation Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>