force-app/main/default/objects/departures_dates__c/fields/TC_Hold__c.field-meta.xml
<CustomField>
    <fullName>TC_Hold__c</fullName>
    <label>TC Hold</label>
    <summarizedField>order__c.qty__c</summarizedField>
    <summaryFilterItems>
        <field>order__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>TC</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>order__c.order_status__c</field>
        <operation>equals</operation>
        <value>On Hold</value>
    </summaryFilterItems>
    <summaryForeignKey>order__c.departures_dates__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>