force-app/main/default/objects/departures_dates__c/fields/TC_Hold_Sold__c.field-meta.xml
<CustomField>
    <fullName>TC_Hold_Sold__c</fullName>
    <label>TC Hold + Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>