force-app/main/default/objects/departures_dates__c/fields/Ticketed_Flights_Cost__c.field-meta.xml
<CustomField>
    <fullName>Ticketed_Flights_Cost__c</fullName>
    <label>Ticketed Flights Cost</label>
    <summarizedField>order__c.Total_Flight_Cost__c</summarizedField>
    <summaryFilterItems>
        <field>order__c.Total_Flight_Cost__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>order__c.departures_dates__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>